Mise à jour de la barre de navigation

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Accueil</a></li>
-                    <li><a href="post-job.html">Publier une offre</a></li>
-                    <li><a href="candidate-upload.html">Espace candidat</a></li>
+                    <li><a href="candidate-login.html">Espace candidat</a></li>
+                    <li><a href="company-login.html">Espace entreprise</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -324,8 +324,8 @@
                     <h4 class="footer-heading">Navigation</h4>
                     <ul class="footer-links">
                         <li><a href="index.html"><i class="fas fa-chevron-right"></i> Accueil</a></li>
-                        <li><a href="post-job.html"><i class="fas fa-chevron-right"></i> Publier une offre</a></li>
-                        <li><a href="candidate-upload.html"><i class="fas fa-chevron-right"></i> Espace candidat</a></li>
+                        <li><a href="candidate-login.html"><i class="fas fa-chevron-right"></i> Espace candidat</a></li>
+                        <li><a href="company-login.html"><i class="fas fa-chevron-right"></i> Espace entreprise</a></li>
                         <li><a href="about.html"><i class="fas fa-chevron-right"></i> À propos</a></li>
                         <li><a href="#contact"><i class="fas fa-chevron-right"></i> Contact</a></li>
                     </ul>
